--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@
 }
 
 body {
+    touch-action: pan-x pan-y;
     -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
     -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
