--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
 canvas#gameCanvas {
     width: auto;
     height: 100%;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 canvas.cache {
