--- a/main.css
+++ b/main.css
@@ -41,6 +41,8 @@ body {
 canvas#gameCanvas {
     width: auto;
     height: 100%;
+    -webkit-user-drag: none;
+    user-select: none;
 }
 
 canvas.cache {
